frontend/test/should_pass/exectype_SetVisited.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=varia && i:int=0 && y:boolean=true && {x.visited[i]=y});
	}
}