frontend/test/should_fail/exectype_IsVisited2.grg
using exectype;

rule r
{
	modify  {
		exec(x:A=::varia && i:string="gnampf" && {x.visited[i]});
	}
}